Set up page formatting

--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
                 </div>
             </div>
         </header>
-        
+
         <br><br>
 
         <section class="site-body">
             <h2 id="title">Coding Challenge Quiz</h2>
             <p id="page-info">Test</p>
+
+            <div>
+                <button>Start!</button>
+            </div>
+            
         </section>
 
         <script src="./assets/js/script.js"></script> 
