Wrote logic for displaying questions and answers

--- a/index.html
+++ b/index.html
@@ -15,19 +15,24 @@
                 </div>
 
                 <div id="timer">
-                    Time: <label id="time"></label>
+                    Time: <label id="time">0</label>
                 </div>
             </div>
         </header>
 
-        <br><br>
-
         <section class="site-body">
             <h2 id="title">Coding Challenge Quiz</h2>
-            <p id="page-info">Test</p>
+            <h3 id="question" style="display:none"></h3>
+            <div>
+                <ul id="ansList">
+                    <li>
+                        <p id="page-info">Do you think you have what it takes to enter the front lines of software development? Test your coding knowledge with this freaking awesome and radical coding quiz!</p>
+                    </li>
+                </ul>
+            </div>
 
             <div>
-                <button>Start!</button>
+                <button class="btn" id="start">Start!</button>
             </div>
             
         </section>
