--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="main-header">
             <div class="container">
                 <div>
-                    <a href="">View high scores</a>
+                    <a class="highScores" href="javascript:displayHighScores()">View high scores</a>
                 </div>
 
                 <div id="timer">
